src/parser/XQueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XQueryParser.java */
package parser;

/** An XQuery Grammar. */
public class XQueryParser/*@bgen(jjtree)*/implements XQueryParserTreeConstants, XQueryParserConstants {/*@bgen(jjtree)*/
  protected static JJTXQueryParserState jjtree = new JJTXQueryParserState();
  /** Main entry point. */
  /*public static void main(String args[]) {
    System.out.println("Reading from standard input...");
    XQueryParser t = new XQueryParser(System.in);
    try {
      ASTStart n = t.Start();
      n.dump(">");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }*/

/** Main production. */
  static final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      XQuery();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/** An Xpath. */
  static final public void XPath() throws ParseException {
    AbsPath();
  }

/** An Absolute Path. */
  static final public void DocPath() throws ParseException {
                       /*@bgen(jjtree) Doc */
                        ASTDoc jjtn000 = new ASTDoc(JJTDOC);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(DOC);
      jj_consume_token(25);
      t = jj_consume_token(STRING);
                           jjtn000.fileName = t.image;
      jj_consume_token(26);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void AbsPath() throws ParseException {
    if (jj_2_1(5)) {
    ASTAbsSlash jjtn001 = new ASTAbsSlash(JJTABSSLASH);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        DocPath();
        jj_consume_token(27);
        RelPath();
      } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    } else if (jj_2_2(5)) {
    ASTAbsDSlash jjtn002 = new ASTAbsDSlash(JJTABSDSLASH);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        DocPath();
        jj_consume_token(28);
        RelPath();
      } catch (Throwable jjte002) {
    if (jjtc002) {
      jjtree.clearNodeScope(jjtn002);
      jjtc002 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte002 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte002;}
    }
    if (jjte002 instanceof ParseException) {
      {if (true) throw (ParseException)jjte002;}
    }
    {if (true) throw (Error)jjte002;}
      } finally {
    if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/** A Relative Path. */
  static final public void RelPath() throws ParseException {
    if (jj_2_6(2147483647)) {
    ASTRelSlash jjtn001 = new ASTRelSlash(JJTRELSLASH);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        RelPathPrime();
        label_1:
        while (true) {
          jj_consume_token(27);
          RelPath();
          if (jj_2_3(2147483647)) {
            ;
          } else {
            break label_1;
          }
        }
      } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    } else if (jj_2_7(2147483647)) {
    ASTRelDSlash jjtn002 = new ASTRelDSlash(JJTRELDSLASH);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        RelPathPrime();
        label_2:
        while (true) {
          jj_consume_token(28);
          RelPath();
          if (jj_2_4(2147483647)) {
            ;
          } else {
            break label_2;
          }
        }
      } catch (Throwable jjte002) {
    if (jjtc002) {
      jjtree.clearNodeScope(jjtn002);
      jjtc002 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte002 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte002;}
    }
    if (jjte002 instanceof ParseException) {
      {if (true) throw (ParseException)jjte002;}
    }
    {if (true) throw (Error)jjte002;}
      } finally {
    if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
    } else if (jj_2_8(2147483647)) {
    ASTRelFilter jjtn003 = new ASTRelFilter(JJTRELFILTER);
    boolean jjtc003 = true;
    jjtree.openNodeScope(jjtn003);
      try {
        RelPathPrime();
        label_3:
        while (true) {
          jj_consume_token(29);
          Filter();
          jj_consume_token(30);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 29:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_3;
          }
        }
        RelSlash();
      } catch (Throwable jjte003) {
    if (jjtc003) {
      jjtree.clearNodeScope(jjtn003);
      jjtc003 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte003 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte003;}
    }
    if (jjte003 instanceof ParseException) {
      {if (true) throw (ParseException)jjte003;}
    }
    {if (true) throw (Error)jjte003;}
      } finally {
    if (jjtc003) {
      jjtree.closeNodeScope(jjtn003, true);
    }
      }
    } else if (jj_2_9(2147483647)) {
    ASTRelFilter jjtn004 = new ASTRelFilter(JJTRELFILTER);
    boolean jjtc004 = true;
    jjtree.openNodeScope(jjtn004);
      try {
        RelPathPrime();
        label_4:
        while (true) {
          jj_consume_token(29);
          Filter();
          jj_consume_token(30);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 29:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_4;
          }
        }
        RelDSlash();
      } catch (Throwable jjte004) {
    if (jjtc004) {
      jjtree.clearNodeScope(jjtn004);
      jjtc004 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte004 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte004;}
    }
    if (jjte004 instanceof ParseException) {
      {if (true) throw (ParseException)jjte004;}
    }
    {if (true) throw (Error)jjte004;}
      } finally {
    if (jjtc004) {
      jjtree.closeNodeScope(jjtn004, true);
    }
      }
    } else if (jj_2_10(2147483647)) {
    ASTRelFilter jjtn005 = new ASTRelFilter(JJTRELFILTER);
    boolean jjtc005 = true;
    jjtree.openNodeScope(jjtn005);
      try {
        RelPathPrime();
        label_5:
        while (true) {
          jj_consume_token(29);
          Filter();
          jj_consume_token(30);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 29:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_5;
          }
        }
        RelComma();
      } catch (Throwable jjte005) {
    if (jjtc005) {
      jjtree.clearNodeScope(jjtn005);
      jjtc005 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte005 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte005;}
    }
    if (jjte005 instanceof ParseException) {
      {if (true) throw (ParseException)jjte005;}
    }
    {if (true) throw (Error)jjte005;}
      } finally {
    if (jjtc005) {
      jjtree.closeNodeScope(jjtn005, true);
    }
      }
    } else if (jj_2_11(2147483647)) {
    ASTRelFilter jjtn006 = new ASTRelFilter(JJTRELFILTER);
    boolean jjtc006 = true;
    jjtree.openNodeScope(jjtn006);
      try {
        RelPathPrime();
        label_6:
        while (true) {
          jj_consume_token(29);
          Filter();
          jj_consume_token(30);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 29:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_6;
          }
        }
      } catch (Throwable jjte006) {
    if (jjtc006) {
      jjtree.clearNodeScope(jjtn006);
      jjtc006 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte006 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte006;}
    }
    if (jjte006 instanceof ParseException) {
      {if (true) throw (ParseException)jjte006;}
    }
    {if (true) throw (Error)jjte006;}
      } finally {
    if (jjtc006) {
      jjtree.closeNodeScope(jjtn006, true);
    }
      }
    } else if (jj_2_12(2147483647)) {
    ASTComma jjtn007 = new ASTComma(JJTCOMMA);
    boolean jjtc007 = true;
    jjtree.openNodeScope(jjtn007);
      try {
        RelPathPrime();
        label_7:
        while (true) {
          jj_consume_token(COMMA);
          RelPath();
          if (jj_2_5(2147483647)) {
            ;
          } else {
            break label_7;
          }
        }
      } catch (Throwable jjte007) {
    if (jjtc007) {
      jjtree.clearNodeScope(jjtn007);
      jjtc007 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte007 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte007;}
    }
    if (jjte007 instanceof ParseException) {
      {if (true) throw (ParseException)jjte007;}
    }
    {if (true) throw (Error)jjte007;}
      } finally {
    if (jjtc007) {
      jjtree.closeNodeScope(jjtn007, true);
    }
      }
    } else if (jj_2_13(2147483647)) {
      RelPathPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void RelSlash() throws ParseException {
                             /*@bgen(jjtree) RelSlash */
  ASTRelSlash jjtn000 = new ASTRelSlash(JJTRELSLASH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(27);
      RelPath();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void RelDSlash() throws ParseException {
                               /*@bgen(jjtree) RelDSlash */
  ASTRelDSlash jjtn000 = new ASTRelDSlash(JJTRELDSLASH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(28);
      RelPath();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void RelComma() throws ParseException {
                             /*@bgen(jjtree) RelComma */
  ASTRelComma jjtn000 = new ASTRelComma(JJTRELCOMMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(COMMA);
      RelPath();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void RelFilter() throws ParseException {
                               /*@bgen(jjtree) RelFilter */
  ASTRelFilter jjtn000 = new ASTRelFilter(JJTRELFILTER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(29);
      Filter();
      jj_consume_token(30);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void RelPathPrime() throws ParseException {
                              Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 31:
    ASTStar jjtn001 = new ASTStar(JJTSTAR);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(31);
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      break;
    case 32:
    ASTDot jjtn002 = new ASTDot(JJTDOT);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(32);
      } finally {
    if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
      break;
    case 33:
    ASTDdot jjtn003 = new ASTDdot(JJTDDOT);
    boolean jjtc003 = true;
    jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(33);
      } finally {
    if (jjtc003) {
      jjtree.closeNodeScope(jjtn003, true);
    }
      }
      break;
    case TEXT:
    ASTText jjtn004 = new ASTText(JJTTEXT);
    boolean jjtc004 = true;
    jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(TEXT);
      } finally {
    if (jjtc004) {
      jjtree.closeNodeScope(jjtn004, true);
    }
      }
      break;
    case 25:
    ASTParen jjtn005 = new ASTParen(JJTPAREN);
    boolean jjtc005 = true;
    jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(25);
        RelPath();
        jj_consume_token(26);
      } catch (Throwable jjte005) {
    if (jjtc005) {
      jjtree.clearNodeScope(jjtn005);
      jjtc005 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte005 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte005;}
    }
    if (jjte005 instanceof ParseException) {
      {if (true) throw (ParseException)jjte005;}
    }
    {if (true) throw (Error)jjte005;}
      } finally {
    if (jjtc005) {
      jjtree.closeNodeScope(jjtn005, true);
    }
      }
      break;
    case TAGNAME:
      t = jj_consume_token(TAGNAME);
                  ASTTagName jjtn006 = new ASTTagName(JJTTAGNAME);
                  boolean jjtc006 = true;
                  jjtree.openNodeScope(jjtn006);
      try {
                  jjtree.closeNodeScope(jjtn006, true);
                  jjtc006 = false;
                  jjtn006.tagName = t.image;
      } finally {
                  if (jjtc006) {
                    jjtree.closeNodeScope(jjtn006, true);
                  }
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/** A Filter Path. */
  static final public void Filter() throws ParseException {
    if (jj_2_16(2147483647)) {
    ASTFilterAnd jjtn001 = new ASTFilterAnd(JJTFILTERAND);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        FilterPrime();
        label_8:
        while (true) {
          jj_consume_token(AND);
          Filter();
          if (jj_2_14(2147483647)) {
            ;
          } else {
            break label_8;
          }
        }
      } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    } else if (jj_2_17(2147483647)) {
    ASTFilterOr jjtn002 = new ASTFilterOr(JJTFILTEROR);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        FilterPrime();
        label_9:
        while (true) {
          jj_consume_token(OR);
          Filter();
          if (jj_2_15(2147483647)) {
            ;
          } else {
            break label_9;
          }
        }
      } catch (Throwable jjte002) {
    if (jjtc002) {
      jjtree.clearNodeScope(jjtn002);
      jjtc002 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte002 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte002;}
    }
    if (jjte002 instanceof ParseException) {
      {if (true) throw (ParseException)jjte002;}
    }
    {if (true) throw (Error)jjte002;}
      } finally {
    if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
    } else if (jj_2_18(2147483647)) {
      FilterPrime();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FilterPrime() throws ParseException {
    if (jj_2_19(2147483647)) {
    ASTFilterEq jjtn001 = new ASTFilterEq(JJTFILTEREQ);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        RelPath();
        jj_consume_token(EQ);
        RelPath();
      } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    } else if (jj_2_20(2147483647)) {
    ASTFilterIs jjtn002 = new ASTFilterIs(JJTFILTERIS);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        RelPath();
        jj_consume_token(IS);
        RelPath();
      } catch (Throwable jjte002) {
    if (jjtc002) {
      jjtree.clearNodeScope(jjtn002);
      jjtc002 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte002 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte002;}
    }
    if (jjte002 instanceof ParseException) {
      {if (true) throw (ParseException)jjte002;}
    }
    {if (true) throw (Error)jjte002;}
      } finally {
    if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
    } else if (jj_2_21(2147483647)) {
      RelPath();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
    ASTFilterParen jjtn003 = new ASTFilterParen(JJTFILTERPAREN);
    boolean jjtc003 = true;
    jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(25);
          Filter();
          jj_consume_token(26);
        } catch (Throwable jjte003) {
    if (jjtc003) {
      jjtree.clearNodeScope(jjtn003);
      jjtc003 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte003 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte003;}
    }
    if (jjte003 instanceof ParseException) {
      {if (true) throw (ParseException)jjte003;}
    }
    {if (true) throw (Error)jjte003;}
        } finally {
    if (jjtc003) {
      jjtree.closeNodeScope(jjtn003, true);
    }
        }
        break;
      case NOT:
    ASTFilterNot jjtn004 = new ASTFilterNot(JJTFILTERNOT);
    boolean jjtc004 = true;
    jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(NOT);
          Filter();
        } catch (Throwable jjte004) {
    if (jjtc004) {
      jjtree.clearNodeScope(jjtn004);
      jjtc004 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte004 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte004;}
    }
    if (jjte004 instanceof ParseException) {
      {if (true) throw (ParseException)jjte004;}
    }
    {if (true) throw (Error)jjte004;}
        } finally {
    if (jjtc004) {
      jjtree.closeNodeScope(jjtn004, true);
    }
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ForClause() throws ParseException {
                               /*@bgen(jjtree) ForClause */
  ASTForClause jjtn000 = new ASTForClause(JJTFORCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      In();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        In();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void In() throws ParseException {
                 /*@bgen(jjtree) In */
  ASTIn jjtn000 = new ASTIn(JJTIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Var();
      jj_consume_token(IN);
      XQuery();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
